@@ -1,5 +1,0 @@
-Showcase applications written in OO.
-
-Inheriting from such application.
-
-Including such application under a prefix. (TODO)
