@@ -9,11 +9,11 @@ use Bailador::ContentTypes;
 use Bailador::Context;
 use Bailador::Exceptions;
 use Bailador::LogAdapter;
+use Bailador::LogFormatter;
 use Bailador::Route;
 use Bailador::Route::AutoHead;
 use Bailador::Sessions;
 use Bailador::Template::Mojo;
-use Bailador::Utils;
 
 class Bailador::App does Bailador::Routing {
     # has Str $.location is rw = get-app-root().absolute;
@@ -87,8 +87,22 @@ class Bailador::App does Bailador::Routing {
 
     method before-run() {
         # probably a good place for a hook
-        my $formatter = $.config.log-format;
         my @filter    = $.config.log-filter;
+        my $formatter = Bailador::LogFormatter.new(
+            format   => $.config.log-format,
+            colorize => $.config.terminal-color,
+            colors   => {
+                trace     =>  $.config.terminal-color-trace,
+                debug     =>  $.config.terminal-color-debug,
+                info      =>  $.config.terminal-color-info,
+                notice    =>  $.config.terminal-color-notice,
+                warning   =>  $.config.terminal-color-warning,
+                errors    =>  $.config.terminal-color-error,
+                critical  =>  $.config.terminal-color-critical,
+                alert     =>  $.config.terminal-color-alert,
+                emergency =>  $.config.terminal-color-emergency,
+            },
+        );
         # https://github.com/jsimonet/log-any/issues/1
         # black magic to increase the logging speed
         Log::Any.add( Log::Any::Pipeline.new(), :overwrite );
@@ -200,30 +214,25 @@ class Bailador::App does Bailador::Routing {
         self!sessions.store(self.response, self.request.env);
     }
 
-    method log-console(DateTime $start, DateTime $end) {
-        my Str $text;
-        my Str $color;
-        given self.response.code {
+    method log-request(DateTime $start, DateTime $end, Str $method, Str $uri, Int $http-code) {
+        my $message = "Serving $method $uri with $http-code in " ~ $end - $start ~ 's';
+        given $http-code {
             when 200 <= * < 300 {
-                $color = 'green';
+                Log::Any.info($message);
             }
             when 300 <= * < 400 {
-                $color = 'magenta';
+                Log::Any.debug($message);
             }
             when 400 <= * < 500 {
-                $color = 'yellow';
+                Log::Any.notice($message);
             }
             when * < 500 {
-                $color = 'red';
+                Log::Any.error($message);
             }
             default {
-                $color = 'reset';
+                Log::Any.error($message);
             }
         }
-        $text = 'HTTP Status: ' ~ self.response.code;
-        $text = $text ~ ' || Elapsed time : ' ~ $end - $start ~ 's';
-
-        terminal-color($text, $color, self.config);
     }
 
     multi method baile() {
@@ -298,7 +307,8 @@ class Bailador::App does Bailador::Routing {
 
             LEAVE {
                 my $http-code = self.response.code;
-                Log::Any.trace("Serving $method $uri with $http-code");
+                my DateTime $end = DateTime.now;
+                self.log-request($start, $end, $method, $uri, $http-code);
                 self!done-rendering();
             }
 
@@ -307,7 +317,6 @@ class Bailador::App does Bailador::Routing {
                     self.render();
                 }
                 when X::Bailador::NoRouteFound {
-                    Log::Any.notice("No Route was Found for $method $uri");
                     if self.error_handlers{404} {
                         self.render(:status(404), :type<text/html;charset=UTF-8>, content => self.error_handlers{404}());
                     } elsif $.location.defined && "$.location/views/404.xx".IO.e {
@@ -318,13 +327,6 @@ class Bailador::App does Bailador::Routing {
                 }
                 default {
                     Log::Any.error(.gist);
-                    #if ($env<p6w.errors>:exists) {
-                    #    my $err = $env<p6w.errors>;
-                    #    #$err.say(.gist);
-                    #}
-                    #else {
-                    #    note .gist;
-                    #}
 
                     my $err-page;
                     if $!config.mode eq 'development' {
@@ -341,8 +343,6 @@ class Bailador::App does Bailador::Routing {
                 }
             }
         }
-        my DateTime $end = DateTime.now;
-        self.log-console($start, $end);
 
         return self.response;
     }
