@@ -1,3 +1,5 @@
+   - Ticket #180 - allow to colorize terminal output
+
 0.0.10 2017.08.04
     - Little code and documentation clean
     - Ticket #201 - moved skeleton files into %?RESOURCES and added xt to be "integration tests" that run after installation
